samples/_failures_safe/1761269023_533516_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_28edac81.c: In function ‘main’:
./samples/SAFE/__tmp_28edac81.c:158:29: error: missing terminating " character
  158 |             fprintf(stderr, "Invalid
      |                             ^~~~~~~~
./samples/SAFE/__tmp_28edac81.c:158:13: error: expected expression at end of input
  158 |             fprintf(stderr, "Invalid
      |             ^~~~~~~
./samples/SAFE/__tmp_28edac81.c:158:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_28edac81.c:158:13: error: expected declaration or statement at end of input
